Fixed dependency version error

--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "mysql2geojson",
   "version": "0.1.0",
@@ -16,8 +17,8 @@
   "author": "John J Czaplewski",
   "license": "CC0",
   "dependencies": {
-    "async": ">=0.9.x",
-    "topojson": ">=1.6.x",
-    "wellknown": ">=0.2.x"
+    "async": "0.9.x",
+    "topojson": "1.6.x",
+    "wellknown": "0.2.x"
   }
 }
